--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <div class="logo"><img src="img/liqboClear.png" alt="Logo Alt Text" /></div>
                 
                 <!-- START HEADER TEXT  -->
-                <h3> A Better Way to LCBO.</h3>
+                <h3> A Better Way to LCBO</h3>
                 <!-- <p>Chocolatebar croissant gummies marshmallow donut brownie</p> -->
                 
   
