--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                 <hr/>
                 <!-- INSERT Footer Links // Insert Desired menu items  -->
                 <ul>
-                	<li><a href="mailto:contact@liqboapp.com>Contact</a></li>
+                	<li><a href="mailto:contact@liqboapp.com">Contact</a></li>
                 	<li><a href="#Insert Link Here">Twitter</a></li>
                 	<!-- <li><a href="#Insert Link Here">Press</a></li> -->
                 	<!-- <li><a href="#Insert Link Here">Support</a></li> -->
