--- a/index.html
+++ b/index.html
@@ -170,6 +170,8 @@
             <!-- END FOOTER -->    
             </footer>
         </div>
+                        <h3>Liqbo App 2015 &copy;</h3>
+
         </div>
 		
 		
