--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                 <ul class="social-link clearfix">
                 	
                 	<li><a href="#">f</a></li>
-                	<!--<li><a href="#">1</a></li>-->
+                	<li><a href="mailto:contact@liqboapp.com">Email Us</a></li>
                 	<li><a href="#">l</a></li>
                 </ul>	
                 
