--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <!-- INSERT FEATURE TEXT  -->
 	                <article>
                     	<h2>Products & Stores</h2>                        
-                    	<p>The Products are sorted by best available deals and Stores have everything you need from Hours to Accessbility. </p>
+                    	<p>The Products are sorted by best available deals and Stores have everything you need from Hours to Accessibility. </p>
 	                </article>
 	            </div>    
                 
